--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup {
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 798px) {
-  .popup__container {
+  .popup {
     padding: 25px 22px;
     max-width: 282px;
   }
