--- a/pages/index.css
+++ b/pages/index.css
@@ -31,7 +31,7 @@
 
 @import url('../blocks/page/__overlay/page__overlay.css');
 @import url('../blocks/page/__overlay/page__overlay_active.css');
-@import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/__button/popup__button_close.css');
 @import url('../blocks/popup/__heading/popup__heading.css');
 @import url('../blocks/popup/__input-container/popup__input-container.css');
