--- a/blocks/profile/__button/_add/profile__button_add.css
+++ b/blocks/profile/__button/_add/profile__button_add.css
@@ -1,5 +1,5 @@
 .profile__button_add {
-  background-image: url("../../../images/add-button.svg");
+  background-image: url("../../../../images/add-button.svg");
   border: 1px solid #ffffff;
   box-sizing: border-box;
   width: 150px;
