--- a/blocks/elements/__caption/elements__caption.css
+++ b/blocks/elements/__caption/elements__caption.css
@@ -1,6 +1,6 @@
 .elements__caption {
   margin: 0;
-  padding: 0;
+  padding: 25px 0;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
