--- a/blocks/popup/__item/_el/popup__item_el_about.css
+++ b/blocks/popup/__item/_el/popup__item_el_about.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   margin-bottom: 48px;
+  padding-bottom: 9px;
 }
 
 @media screen and (max-width: 798px) {
-  .popup_item_el_about {
-    margin-bottom: 45px;
+  .popup__item_el_about {
+    margin-bottom: 42px;
   }
 }
