--- a/blocks/profile/__button/_edit/profile__button_edit.css
+++ b/blocks/profile/__button/_edit/profile__button_edit.css
@@ -1,5 +1,6 @@
 .profile__button_edit {
-  background-image: url("../../../images/edit-button.svg");
+  background-image: url("../../../../images/edit-button.svg");
+  border: 1px solid #ffffff;
   box-sizing: border-box;
   width: 24px;
   height: 24px;
