--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,4 +1,6 @@
 .popup__item {
+  margin: 0;
+  padding: 0;
   border: 0;
   width: 100%;
   box-sizing: border-box;
@@ -10,4 +12,16 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
+  margin-bottom: 30px;
+  padding-bottom: 9px;
 }
+
+.popup__item:last-of-type {
+  margin-bottom: 48px;
+}
+
+@media screen and (max-width: 798px) {
+  .popup__item:last-of-type {
+    margin-bottom: 42px;
+  }
+} 
