--- a/blocks/page/__overlay/page__overlay.css
+++ b/blocks/page/__overlay/page__overlay.css
@@ -7,7 +7,11 @@
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
+  align-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s linear;
 }
 
 @media screen and (max-width: 798px) {
