--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url('../blocks/elements/__caption/elements__caption.css');
 @import url('../blocks/elements/__button/elements__button-like.css');
 @import url('../blocks/elements/__button/_active/elements__button-like_active.css');
+@import url('../blocks/elements/__button/elements__button-delete.css');
 
 @import url('../blocks/page/__footer/page__footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
@@ -36,3 +37,7 @@
 @import url('../blocks/popup/__input-container/popup__input-container.css');
 @import url('../blocks/popup/__item/popup__item.css');
 @import url('../blocks/popup/__submit/popup__submit.css');
+@import url('../blocks/page/__overlay/_type/page__overlay_type_look.css');
+@import url('../blocks/popup/__box/popup__box.css');
+@import url('../blocks/popup/__image/popup__image.css');
+@import url('../blocks/popup/__caption/popup__caption.css');
