--- a/blocks/popup/_type/popup_type_figure.css
+++ b/blocks/popup/_type/popup_type_figure.css
@@ -1,4 +1,4 @@
-.popup_look {
+.popup_type_figure {
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
   padding: 0;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 798px) {
-  .popup_look {
+  .popup_type_figure {
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     position: relative;
     padding: 0;
