--- a/blocks/content/__profile/content__profile.css
+++ b/blocks/content/__profile/content__profile.css
@@ -7,6 +7,13 @@
   align-content: space-between;
 }
 
+@media screen and (max-width: 934px) {
+  .content__profile {
+    padding-left: 27px;
+    padding-right: 27px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .content__profile {
     padding-top: 42px;
