--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__button_close {
+.popup__button {
   border: 0;
   background: rgba(255, 255, 255, 0);
   position: absolute;
@@ -10,23 +10,19 @@
   cursor: pointer;
   background-repeat: no-repeat;
   background-position: center;
+  transition: opacity 0.4s linear 0s;
 }
 
-.popup__button_close:hover {
-  transition: opacity 0.4s linear 0s;
+.popup__button:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width: 798px) {
-  .popup__button_close {
+  .popup__button {
     top: -51px;
     right: 0;
     width: 36.76px;
     height: 36.76px;
     background-size: 100%;
   }
-}
-
-.popup__button_close:focus {
-  outline: none !important;
 }
