--- a/blocks/profile/__button/_add/profile__button_add.css
+++ b/blocks/profile/__button/_add/profile__button_add.css
@@ -1,21 +1,11 @@
 .profile__button_add {
   background-image: url("../../../../images/add-button.svg");
-  border: 1px solid #ffffff;
-  box-sizing: border-box;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
   width: 150px;
   height: 50px;
   background-size: 22px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: black;
 }
-
-.profile__button_add:hover {
-  transition: opacity 0.4s linear 0s;
-  opacity: 0.6;
-  cursor: pointer;
-}
-
 
 @media screen and (max-width: 768px) {
   .profile__button_add {
