--- a/pages/index.css
+++ b/pages/index.css
@@ -14,30 +14,32 @@
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__name/profile__name.css');
 @import url('../blocks/profile/__about/profile__about.css');
+@import url('../blocks/profile/__button/profile__button.css');
 @import url('../blocks/profile/__button/_edit/profile__button_edit.css');
 @import url('../blocks/profile/__button/_add/profile__button_add.css');
 
 @import url('../blocks/content/__elements/content__elements.css');
 @import url('../blocks/elements/__item/elements__item.css');
 @import url('../blocks/elements/__image/elements__image.css');
-@import url('../blocks/elements/__flex/elements__flex.css');
+@import url('../blocks/elements/__box/elements__box.css');
 @import url('../blocks/elements/__caption/elements__caption.css');
-@import url('../blocks/elements/__button/elements__button-like.css');
-@import url('../blocks/elements/__button/_active/elements__button-like_active.css');
-@import url('../blocks/elements/__button/elements__button-delete.css');
+@import url('../blocks/elements/__button-like/elements__button-like.css');
+@import url('../blocks/elements/__button-like/_active/elements__button-like_active.css');
+@import url('../blocks/elements/__button-delete/elements__button-delete.css');
 
 @import url('../blocks/page/__footer/page__footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 
+@import url('../blocks/popup/popup.css');
 @import url('../blocks/page/__overlay/page__overlay.css');
 @import url('../blocks/page/__overlay/_active/page__overlay_active.css');
 @import url('../blocks/popup/_type/popup_type_form.css');
-@import url('../blocks/popup/__button/_close/popup__button_close.css');
+@import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__heading/popup__heading.css');
 @import url('../blocks/popup/__input-container/popup__input-container.css');
 @import url('../blocks/popup/__item/popup__item.css');
 @import url('../blocks/popup/__submit/popup__submit.css');
 @import url('../blocks/page/__overlay/_type/page__overlay_type_look.css');
-@import url('../blocks/popup/_type/popup_type_figure.css');
 @import url('../blocks/popup/__image/popup__image.css');
+@import url('../blocks/popup/__figure/popup__figure.css');
 @import url('../blocks/popup/__caption/popup__caption.css');
