--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -6,7 +6,7 @@
   right: -48.28px;
   width: 56.56px;
   height: 56.56px;
-  background-image: url("../../../../images/close-icon.svg");
+  background-image: url("../../../images/close-icon.svg");
   cursor: pointer;
   background-repeat: no-repeat;
   background-position: center;
