--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__item {
+.popup__input {
   margin: 0;
   padding: 0;
   border: 0;
@@ -16,12 +16,12 @@
   padding-bottom: 9px;
 }
 
-.popup__item:last-of-type {
+.popup__input:last-of-type {
   margin-bottom: 48px;
 }
 
 @media screen and (max-width: 798px) {
-  .popup__item:last-of-type {
+  .popup__input:last-of-type {
     margin-bottom: 42px;
   }
 } 
