--- a/pages/index.css
+++ b/pages/index.css
@@ -39,7 +39,10 @@
 @import url('../blocks/popup/__input-container/popup__input-container.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__input-error/popup__input-error.css');
+@import url('../blocks/popup/__input-error/_active/popup__input-error_active.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
 @import url('../blocks/popup/__submit/popup__submit.css');
+@import url('../blocks/popup/__submit/_inactive/popup__submit_inactive.css');
 @import url('../blocks/page/__overlay/_type/page__overlay_type_look.css');
 @import url('../blocks/popup/__image/popup__image.css');
 @import url('../blocks/popup/__figure/popup__figure.css');
