--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -23,8 +23,10 @@
 @import url('../blocks/elements/__image/elements__image.css');
 @import url('../blocks/elements/__box/elements__box.css');
 @import url('../blocks/elements/__caption/elements__caption.css');
+@import url('../blocks/elements/__like-box/elements__like-box.css');
 @import url('../blocks/elements/__button-like/elements__button-like.css');
 @import url('../blocks/elements/__button-like/_active/elements__button-like_active.css');
+@import url('../blocks/elements/__number/elements__number.css');
 @import url('../blocks/elements/__button-delete/elements__button-delete.css');
 
 @import url('../blocks/page/__footer/page__footer.css');
